// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-7o2an9 {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-uyols6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1edxwi6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-1edxwi6 .eqr7bqq3 {
  cursor: pointer;
}

.cache-1edxwi6[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-1edxwi6 .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-1edxwi6 .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-1edxwi6 .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-1edxwi6 .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-1edxwi6 .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-1edxwi6:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-1edxwi6:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-1edxwi6:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-1edxwi6:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1edxwi6:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-1edxwi6 .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-1edxwi6 .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-14lwnfj {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-14lwnfj:not(:disabled) {
  cursor: pointer;
}

.cache-14lwnfj:disabled {
  cursor: not-allowed;
}

.cache-14lwnfj:not(:disabled):checked+.eqr7bqq4,
.cache-14lwnfj:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #521094;
}

.cache-14lwnfj:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-14lwnfj:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #521094;
}

.cache-14lwnfj:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-14lwnfj:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-14lwnfj:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-14lwnfj:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-14lwnfj:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 2px solid #e5dbfd;
}

.cache-14lwnfj:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-14lwnfj[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 2px solid #ffd3e3;
}

.cache-14lwnfj[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-55x4xn {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-55x4xn path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-16eol3o {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-d2sbm0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-7efi4w {
  display: grid;
  grid-template-columns: 11fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

<form
    novalidate=""
  >
    <div
      class="cache-kwbqjp ehpbis70"
    >
      <fieldset
        class="cache-7o2an9 e1k5uyng1"
      >
        <div
          class="cache-uyols6 ehpbis70"
        >
          <legend
            class="cache-tjeurz e13y3mga0"
          >
            Label 
          </legend>
          <div
            class="cache-kwbqjp ehpbis70"
          >
            <div
              aria-disabled="false"
              class="cache-1edxwi6 eqr7bqq1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="cache-14lwnfj eqr7bqq2"
                id="Checkbox.value-1"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="cache-55x4xn eqr7bqq4"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="cache-16eol3o eqr7bqq6"
                    height="20"
                    rx="2px"
                    stroke-width="2"
                    width="20"
                    x="2"
                    y="2"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="14"
                    width="14"
                  />
                </g>
              </svg>
              <div
                class="cache-d2sbm0 ehpbis70"
              >
                <div
                  class="cache-7efi4w e3f5lzv0"
                >
                  <label
                    class="cache-0 eqr7bqq3"
                    for="Checkbox.value-1"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="cache-1edxwi6 eqr7bqq1"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                class="cache-14lwnfj eqr7bqq2"
                id="Checkbox.value-2"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="cache-55x4xn eqr7bqq4"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="cache-16eol3o eqr7bqq6"
                    height="20"
                    rx="2px"
                    stroke-width="2"
                    width="20"
                    x="2"
                    y="2"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="14"
                    width="14"
                  />
                </g>
              </svg>
              <div
                class="cache-d2sbm0 ehpbis70"
              >
                <div
                  class="cache-7efi4w e3f5lzv0"
                >
                  <label
                    class="cache-0 eqr7bqq3"
                    for="Checkbox.value-2"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  .cache-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-7o2an9 {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-uyols6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-vesylc-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
  vertical-align: super;
}

.cache-1edxwi6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-1edxwi6 .eqr7bqq3 {
  cursor: pointer;
}

.cache-1edxwi6[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1edxwi6[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-1edxwi6 .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-1edxwi6 .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-1edxwi6 .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-1edxwi6 .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-1edxwi6 .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-1edxwi6:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-1edxwi6:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-1edxwi6:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-1edxwi6:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1edxwi6:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-1edxwi6 .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-1edxwi6 .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-14lwnfj {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-14lwnfj:not(:disabled) {
  cursor: pointer;
}

.cache-14lwnfj:disabled {
  cursor: not-allowed;
}

.cache-14lwnfj:not(:disabled):checked+.eqr7bqq4,
.cache-14lwnfj:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #521094;
}

.cache-14lwnfj:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-14lwnfj:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #521094;
}

.cache-14lwnfj:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-14lwnfj:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-14lwnfj:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-14lwnfj:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-14lwnfj:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 2px solid #e5dbfd;
}

.cache-14lwnfj:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-14lwnfj[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 2px solid #ffd3e3;
}

.cache-14lwnfj[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-55x4xn {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-55x4xn path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-16eol3o {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-d2sbm0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-7efi4w {
  display: grid;
  grid-template-columns: 11fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

<form
    novalidate=""
  >
    <div
      class="cache-kwbqjp ehpbis70"
    >
      <fieldset
        class="cache-7o2an9 e1k5uyng1"
      >
        <div
          class="cache-uyols6 ehpbis70"
        >
          <legend
            class="cache-tjeurz e13y3mga0"
          >
            CheckboxGroupField events 
            <svg
              class="e1k5uyng0 cache-vesylc-sizeStyles e1gt4cfo0"
              viewBox="0 0 24 24"
            >
              <path
                d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
              />
            </svg>
          </legend>
          <div
            class="cache-kwbqjp ehpbis70"
          >
            <div
              aria-disabled="false"
              class="cache-1edxwi6 eqr7bqq1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="cache-14lwnfj eqr7bqq2"
                id="test.value-1"
                name="test.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="cache-55x4xn eqr7bqq4"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="cache-16eol3o eqr7bqq6"
                    height="20"
                    rx="2px"
                    stroke-width="2"
                    width="20"
                    x="2"
                    y="2"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="14"
                    width="14"
                  />
                </g>
              </svg>
              <div
                class="cache-d2sbm0 ehpbis70"
              >
                <div
                  class="cache-7efi4w e3f5lzv0"
                >
                  <label
                    class="cache-0 eqr7bqq3"
                    for="test.value-1"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="cache-1edxwi6 eqr7bqq1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="cache-14lwnfj eqr7bqq2"
                id="test.value-2"
                name="test.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="cache-55x4xn eqr7bqq4"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="cache-16eol3o eqr7bqq6"
                    height="20"
                    rx="2px"
                    stroke-width="2"
                    width="20"
                    x="2"
                    y="2"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="14"
                    width="14"
                  />
                </g>
              </svg>
              <div
                class="cache-d2sbm0 ehpbis70"
              >
                <div
                  class="cache-7efi4w e3f5lzv0"
                >
                  <label
                    class="cache-0 eqr7bqq3"
                    for="test.value-2"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;
